--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background: #151515 url("../images/bkg.png") 0 0;
+  background: #151515 url("../imgs/bkg.png") 0 0;
   color: #eaeaea;
   font: 16px;
   line-height: 1.5;
@@ -12,7 +12,7 @@ body {
 
 .container {
   width: 90%;
-  max-width: 600px;
+  max-width: 800px;
   margin: 0 auto;
 }
 
@@ -25,7 +25,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0 0 20px;
 }
 
-li {
+ul.text li {
   line-height: 1.4 ;
 }
 
@@ -90,25 +90,33 @@ h1, h2, h3, h4, h5, h6 {
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
   color: #b5e853;
   letter-spacing: -0.03em;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
+  Ntext-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
                0 0 5px rgba(181, 232, 83, 0.1),
                0 0 10px rgba(181, 232, 83, 0.1);
 }
+
+p { margin-top:0; font-size:0.97em; }
 
 #main_content h1 {
   font-size: 30px;
 }
 
 #main_content h2 {
-  font-size: 24px;
+  font-size: 20px;
+  margin:20px 0;
 }
 
 #main_content h3 {
-  font-size: 18px;
+  font-size: 17px;
+  font-weight:bold;
+  margin:20px 0;
 }
 
 #main_content h4 {
-  font-size: 14px;
+  font-size: 17px;
+  font-weight:normal;
+  margin:30px 0 20px;
+  color:#63c0f5;
 }
 
 #main_content h5 {
@@ -129,11 +137,11 @@ dt {
   font-weight: bold;
 }
 
-ul li {
+ul.text li {
   list-style: none;
 }
 
-ul li:before {
+ul.text li:before {
   content: ">>";
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
   font-size: 13px;
@@ -150,7 +158,7 @@ blockquote {
 }
 
 pre {
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(30, 30, 30, 0.9);
   border: 1px solid rgba(255, 255, 255, 0.15);
   padding: 10px;
   font-size: 14px;
@@ -219,7 +227,7 @@ hr {
 
 .btn-github .icon {
   opacity: 0.6;
-  background: url("../images/blacktocat.png") 0 0 no-repeat;
+  background: url("../imgs/blacktocat.png") 0 0 no-repeat;
 }
 
 /* Links
@@ -229,6 +237,7 @@ hr {
 a {
   color: #63c0f5;
   text-shadow: 0 0 5px rgba(104, 182, 255, 0.5);
+  text-decoration:none;
 }
 
 /* Clearfix */
