--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -65,13 +65,14 @@ header h1:before {
 header h2 {
   font-size: 18px;
   font-weight: 300;
-  color: #666;
+  color: #666667;
 }
+
 
 #downloads .btn {
   display: inline-block;
   text-align: center;
-  margin: 0;
+  margin: 0 0 20px;
 }
 
 /* Main Content
