--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -110,7 +110,7 @@ p { margin-top:0; font-size:0.97em; }
 #main_content h3 {
   font-size: 17px;
   font-weight:bold;
-  margin:20px 0;
+  margin:20px 0 15px;
 }
 
 #main_content h4 {
