Little stylesheet fix 2.

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -285,6 +285,8 @@ li, ul, div { border-radius: 3px; }
 .c2 { color:#63c0f5; }
 .c3 { color: #f77720; }
 .c4 { color: #888; }
+.c5 { color: #666667; }
+.c6 { color: #888; }
 
 .bgC1, .gray { background-color:#ccc; }
 .bgC2, .yellow { background-color:#ff8; }
